--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <div id="player"></div>
 
-    <script defer type="text/javascript" src="_rave_concert.js"></script>
+    <script defer type="text/javascript" src="https://raw.githubusercontent.com/allrise1/onlinerave/master/rave_concert.js"></script>
 
     <script>
 	var tag = document.createElement('script');
